# usr-workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt  wsgi.py
.s2i/: environment
ansible_playbooks/: deploy.yaml
kubernetes/: buildconfig.yaml  deployment.yaml  imagestream.yaml  route.yaml  service.yaml
