[tool.poetry]
name = "zipship-workshop"
version = "0.1.0"
description = ""
authors = ["Brady Spiva <bspiva@redhat.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.13.0"
flask-mail = "^0.9.1"
dash-bootstrap-components = "^1.5.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
